<resources>
    <string name="app_name">Laundry Sorter</string>
    <string name="join_now">Join now</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_msg">Create your account:</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="confirm_password">confirm password</string>
    <string name="passwords_not_matching">Those passwords didn\'t match</string>
    <string name="passwords_not_matching_warning">Passwords are not matching</string>
    <string name="default_notification_channel_id">Mg_CH_01</string>
    <string name="logout">Logout</string>
    <string name="select_colors_instruction">Select Baskets colors</string>


</resources>