<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/sign_up_msg"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <EditText
        android:id="@+id/ed_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimaryText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/ed_sign_up_pass"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="55"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_email" />

    <EditText
        android:id="@+id/edSignUpConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorPrimaryText"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="55"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_sign_up_pass" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/passwords_not_matching_warning"
        android:textColor="@color/redAlert"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSignUpConfirmPassword" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_stroke_button"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="signUpOnClick"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>