<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvLogoLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:alpha="1"
        android:background="@drawable/logo_shape"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="30dp"
        android:visibility="gone"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLoginScreen"
        app:layout_constraintTop_toTopOf="@+id/constraintLoginScreen" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLoginScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="invisible">


        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="50dp"
            android:background="@drawable/logo_shape"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <EditText
            android:id="@+id/ed_signin_email"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <EditText
            android:id="@+id/ed_signin_pass"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="55"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorPrimaryText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvForgotPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_signin_email" />


        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"

            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/btn_signin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_signin_pass" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.63" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/custom_stroke_button"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onLoginClick"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="100dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="joinNowOnClick"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="joinNowOnClick"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/join_now"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>